<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.antonioejemplo.localizacionesadmin.AltaUsuarios"
        android:background="@drawable/degradado_fondo">






        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/degradado_fondo"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>


    <!--NOMBRE-->
    <android.support.design.widget.TextInputLayout
            android:id="@+id/nombreWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:theme="@style/TextLabel">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/nombre"
                android:layout_width="@dimen/abc_search_view_preferred_width"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:hint="@string/Name"
                android:inputType="textCapSentences"
/>

<!--ID-->
        </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/id_Androidwr"
        android:layout_below="@+id/nombreWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:paddingLeft="5dp"
        android:layout_marginTop="15dp"
        android:theme="@style/TextLabel"
        >
        <EditText
            android:id="@+id/id_Android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ID_Android" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/idWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="35dp"
            android:layout_below="@+id/id_Androidwr"
            android:theme="@style/TextLabel">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/idUsuario"
                android:layout_width="@dimen/abc_search_view_preferred_width"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:inputType="textCapSentences"
                android:hint="@string/id"
                />
        </android.support.design.widget.TextInputLayout>

<!--PASS-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordwr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/idWrapper">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="@dimen/abc_search_view_preferred_width"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/passwordwr"
                android:hint="@string/password"
                android:inputType="textPostalAddress" />
        </android.support.design.widget.TextInputLayout>




        <!--TELÉFONO-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/telefonoWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/passwordwr">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/telefono"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/telefonoWrapper"
                android:hint="@string/telefono"
                android:inputType="number"
                android:digits="01234567890 "
                android:maxLength="13"/>
        </android.support.design.widget.TextInputLayout>

        <!--EMAIKL-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/telefonoWrapper">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="296dp"

                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/telefonoWrapper"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!--FECHA ALTA-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/altawrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_marginLeft="10dp"
            android:paddingLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/emailWrapper">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/alta"
                android:layout_width="296dp"

                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/altawrp"
                android:hint="Fecha alta"
                android:inputType="textPostalAddress" />
        </android.support.design.widget.TextInputLayout>


        <!--OBSERVACIONES-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/observacionesWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/altawrp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/observaciones"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/alta"
                android:layout_marginLeft="10dp"
                android:hint="@string/Observaciones"
                android:inputType="textCapSentences|textMultiLine"
                />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/texto_contador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:layout_marginRight="33dp"
            android:layout_marginEnd="33dp"


            android:layout_alignBottom="@+id/observacionesWrapper"
            android:layout_alignRight="@+id/observacionesWrapper"
            android:layout_alignEnd="@+id/observacionesWrapper" />


    </RelativeLayout>


